fix: spacing & font

--- a/static/site.css
+++ b/static/site.css
@@ -33,11 +33,18 @@ body{
 }
 
 .tile-name{
-    margin-left: 15px;
+    margin-left: 30px;
+    font-family: monospace;
 }
 
 .tile-image{
     margin-left:    12px;
     margin-top:     12px;
     margin-bottom:  12px;
+}
+
+.main-container{
+    max-width: 1400px;
+    min-width: 80%;
+    margin: auto;
 }
